--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,20 @@
 spring:
   application:
     name: decoder-authentication
+  datasource:
+    url: jdbc:postgresql://localhost:5432/decoder-authentication
+    username: postgres
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non-contextual-creation: true
+        show_sql: true
+    open-in-view: false
+
+server:
+  port: 8087
